添加ddd领域服务支持